src/stylesheets/components/photo/_grid.scss
//
// Photo grid
// --------------------------------------------------

.photo.grid {
  flex: 1 1 0;
  margin-bottom: $space-min;
  display: flex;
  flex-direction: column;

  .over & {
    overflow: hidden;
  }

  .scroll-container {
    padding: $space-min $default-padding-horizontal 0;
  }

  .runway {
    contain: strict;
  }

  .viewport {
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
    contain: content;
    will-change: transform;
  }

  .photo {
    position: relative;
  }
}

